Fixed color contrast errors reported by Wave tool

--- a/web/css/layout/_layered-navigation.less
+++ b/web/css/layout/_layered-navigation.less
@@ -157,7 +157,7 @@
             display: inline-flex;
             white-space: nowrap;
             font-weight: 300;
-            opacity: .5;
+            color: @muted__color;
             .margin-left(@1);
 
             &::before {
