--- a/web/css/pages/_cart.less
+++ b/web/css/pages/_cart.less
@@ -246,7 +246,6 @@
         .action-edit,
         .action-delete,
         .action-towishlist {
-            --muted-alpha: .3;
             color: @muted__color;
             &::before {
                 content: '';
@@ -312,7 +311,7 @@
         .action-towishlist {
             &:extend(.transition all);
             &:hover {
-                --muted-alpha: .6;
+                --muted-alpha: .9;
             }
         }
         .action::before {
